Updated images and added piece reflections

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <li><a href="#portfolio2" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Passion Projects</span></a></li>
+        <li><a href="#reflection" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Reflection</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
       </ul>
@@ -185,7 +186,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Tadros_Feloubatir_assign2_ENG2003_pages-to-jpg-0001.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cover Letter</h4>
                 <p>ENG2003</p>
@@ -199,12 +200,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Tadros_Feloubatir_assign1_handout_pages-to-jpg-0001.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Brochure</h4>
                 <p>ENG2003</p>
                 <div class="portfolio-links">
-                  <a href="" class="portfolio-lightbox" title="Testing"><i class="bx bx-plus"></i></a>
+                  <a href="" class="portfolio-lightbox" title="This item was my first project for this course, and it showcases my first effort of communication. This piece shows I was able to communicate with visuals as well as research. This piece did not take me out of my comfort zone as I’ve worked on brochures before. The difference between this brochure and the others is that this is my first technical brochure. I believe that this is as good as I could have made it. I’m not only proud of the visuals but also the effort made in research and citing. "><i class="bx bx-plus"></i></a>
                   <a href="https://drive.google.com/file/d/1Ili4c5JOa8AnbUG7VjFO7q8ZqN9SfrR-/view?usp=sharing" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -213,12 +214,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Tadros_Feloubatir_TUT08Activity_ENG2003_pages-to-jpg-0004.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Tutorial Graph</h4>
                 <p>ENG2003</p>
                 <div class="portfolio-links">
-                  <a href="" class="portfolio-lightbox" title="Testing"><i class="bx bx-plus"></i></a>
+                  <a href="" class="portfolio-lightbox" title="For tutorial 09, we had to create a graph based on website traffic data. This was the first piece where I felt confident in my creation before submitting it. I have experience with excel so it was nothing I haven’t done yet. I still ended up learning something new. I have never added a median line to a graph before. I believe that even with the new learning, this was my best work, given my knowledge at that time."><i class="bx bx-plus"></i></a>
                   <a href="https://drive.google.com/file/d/1PRBgv-cf2-fzOQ81qc4eD9PjT6A9It1g/view?usp=sharing" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -227,12 +228,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Tadros_Feloubatir_Journal _1and2_page-0001.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Journal</h4>
                 <p>ENG1102</p>
                 <div class="portfolio-links">
-                  <a href="" class="portfolio-lightbox" title="Testing"><i class="bx bx-plus"></i></a>
+                  <a href="" class="portfolio-lightbox" title="This was a reflection on my experience during ENG1102 extracurricular activities. I chose this because this was my first reflection piece for first year. It displays the effects of this course on my ability to communicate. It didn’t push me out of my comfort zone as I’ve reflected before. This was my first university level piece so there was a lot of pressure for it to be done well. I believe that I could’ve done better. I reflected mostly on the content rather than my opinions on the content."><i class="bx bx-plus"></i></a>
                   <a href="https://drive.google.com/file/d/1PSdnE3xUvFEHr3n0aYd2xdNPgDxvn2AS/view?usp=sharing" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -241,7 +242,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Communication Portfolio Section -->
 
     <!-- ======= Regular Portfolio Section ======= -->
     <section id="portfolio2" class="portfolio section-bg">
@@ -256,12 +257,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Screenshot 2022-06-21 150109.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Motcord Bot</h4>
                 <p>Python - Discord Bot</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/Screenshot 2022-06-21 150109.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Worked with my local community to develop a bot to suit their needs. The bot could play games, do google searches, as well as live reacting. Was written using the Discord API in Python. Also was hosted locally on a spare Pi Zero ."><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/FTadros/Discord-Bot-Motcord" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -270,12 +271,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/firststep.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Presetter</h4>
                 <p>Java - Optimization</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/firststep.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="A system that would take potentiometer and button values and do certain things to my computer to open certain websites that I use often. I wrote this in Javas using with firmata4J and Java AWT."><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/FTadros/Presetter" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -285,6 +286,17 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Reflection Section ======= -->
+    <section id="reflection" class="contact">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Reflection</h2>
+          <p>Hi! &#128075; I'm Feloubatir (Felo) Tadros, a Computer Engineering student from the Lassonde School of Engineering who loves computers and has a passion for learning.</p>
+        </div>
+      </div>
+    </section><!-- End Reflection Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -326,7 +338,10 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Feloubatir Tadros</h3>
+      <h3>
+        Feloubatir Tadros<br>
+        218705392
+      </h3>
       <div class="social-links">
         <a href="#" class="github"><i class="bx bxl-github"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
