--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#portfolio2" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Passion Projects</span></a></li>
+        <li><a href="#portfolio2" class="nav-link scrollto"><i class="bx bx-book-bookmark"></i> <span>Passion Projects</span></a></li>
         <li><a href="#reflection" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Reflection</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
