--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#portfolio2" class="nav-link scrollto"><i class="bx bx-book-bookmark"></i> <span>Passion Projects</span></a></li>
+        <li><a href="#portfolio2" class="nav-link scrollto"><i class="bx bx-book-heart"></i> <span>Passion Projects</span></a></li>
         <li><a href="#reflection" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Reflection</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
@@ -62,7 +62,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Feloubatir Tadros</h1>
-      <p>I'm a <span class="typed" data-typed-items="Student, Developer, Coffee Enthusiast, Computer Lover"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Student, Developer, Coffee Enthusiast, Techie"></span></p>
       <div class="social-links">
         <a href="#" class="github"><i class="bx bxl-github"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -138,7 +138,7 @@
               <h5>2021 - Present</h5>
               <p><em>Lassonde School of Engineering, Toronto ON</em></p>
               <ul>
-                <li>cGPA: 7.92/9 (3.79/4.00)</li>
+                <li>cGPA: 7.92/9.0 (3.79/4.00)</li>
                 <li>UNHack 2021 participant - Presented by BEST</li>
               </ul>
             </div>
@@ -151,7 +151,7 @@
               <p><em>ABB / Global Manufacturing Client, Remote </em></p>
               <ul>
                 <li>Review global budget of over $100M to identify potential savings through the review of license usage in over 26 countries.</li>
-                <li>achieved over 96% of the requested data and achieved 26\% savings of the controllable budget. </li>
+                <li>Achieved over 96% of the requested data and achieved 26% savings of the controllable budget. </li>
                 <li>Responsibilities include: Tracking input from line managers regarding their reports of software usage.</li>
                 <li>Following up with non-respondent colleagues to collect input.</li>
                 <li>Escalating any queries to internal ABB to help with clarifications.</li>
@@ -259,7 +259,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Screenshot 2022-06-21 150109.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Motcord Bot</h4>
+                <h4>MotBot</h4>
                 <p>Python - Discord Bot</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/Screenshot 2022-06-21 150109.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Worked with my local community to develop a bot to suit their needs. The bot could play games, do google searches, as well as live reacting. Was written using the Discord API in Python. Also was hosted locally on a spare Pi Zero ."><i class="bx bx-plus"></i></a>
