--- a/index.html
+++ b/index.html
@@ -288,7 +288,23 @@
 
         <div class="section-title">
           <h2>Reflection</h2>
-          <p>Hi! &#128075; I'm Feloubatir (Felo) Tadros, a Computer Engineering student from the Lassonde School of Engineering who loves computers and has a passion for learning.</p>
+        </div>
+        <div>
+          <p>Overall, I enjoyed the experience. I learned a lot about how to professionally communicate as an engineer. This was the first time in my life that I got introduced to a technical report. I also learned how to properly convey myself to employers through the resume and cover letter lectures. This information, while not completely new, there were engineering specific things that I was taught that changed my point of view.</p>
+          <br>
+          <p>I started this course thinking there was going to be more focus on how to verbally communicate. But I was pleasantly surprised to find that there was a good mix of verbal and written communication skill being taught. I also expected that the tutorials would be more of a discussion, as there was no real &ldquo;tutoring&rdquo; needed for this course. The tutorials met my expectations.</p>
+          <br>
+          <p>I found that the discussion on writing a cover letter was most useful as writing cover letters has always been a struggle for me. I found that the way it was taught, and the examples given helped me understand not just how to write a good cover letter but also how to spot mistakes.</p>
+          <br>
+          <p>The discussion on graphics interested me as it was something that I&rsquo;ve always spotted. This was the first time I got to discuss the accuracy vs. effectiveness of graphics in a professional manner. I also found it useful in focusing on using as little ink as possible to convey my information.</p>
+          <br>
+          <p>I would describe my skills before this course as lackluster. I was unable to communicate about anything technical. I found myself unable to explain even the most basic technical concepts. Specifically, after the BOTN assignment, I felt confident in my ability to communicate technical concepts in simpler terms. I would describe my current (post-ENG2003) communication skills as tolerable. I believe that there&rsquo;s more for me to learn.</p>
+          <br>
+          <p>I believe that I improved my written communication skills, specifically when directly interacting with someone, such as through email, cover letter or resume. I believe this due to the fact that I felt the most progress in my skills after each assignment.</p>
+          <br>
+          <p>My verbal communication skills still need to be polished. During the BOTN presentation, while I was able to talk about the topic knowledgably, I&rsquo;m not confident in my presentation skills. This can be improved by doing more presentations and working in more group scenarios.</p>
+          <br>
+          <p>I am now feeling confident not just in my engineering knowledge but also in my ability to communicate. This course has taught me to be a good engineer it&rsquo;s not enough to be knowledgeable, there is always the team working and communicating aspect. For engineering practice, this course taught me how to write a technical report, which is something that is not only valuable but will stick with me until I need it.</p>
         </div>
       </div>
     </section><!-- End Reflection Section -->
