Added Widget, Updated Git/Linkedin links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>  <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Feloubatir Tadros</title>
@@ -64,8 +64,8 @@
       <h1>Feloubatir Tadros</h1>
       <p>I'm a <span class="typed" data-typed-items="Student, Developer, Coffee Enthusiast, Techie"></span></p>
       <div class="social-links">
-        <a href="#" class="github"><i class="bx bxl-github"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/FTadros/" class="github" target="_blank" rel="noreferrer noopener"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/felo-tadros/" class="linkedin" target="_blank" rel="noreferrer noopener"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -79,7 +79,6 @@
           <h2>About</h2>
           <p>Hi! &#128075; I'm Feloubatir (Felo) Tadros, a Computer Engineering student from the Lassonde School of Engineering who loves computers and has a passion for learning.</p>
         </div>
-
         <div class="row">
           <div class="col-lg-4">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
@@ -91,6 +90,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ftadros.github.io/ENG2003-Portfolio/">ftadros.github.io/ENG2003-Portfolio</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Toronto, ON</span></li>
+                  <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="felo-tadros" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ca.linkedin.com/in/felo-tadros?trk=profile-badge"></a></div>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -102,7 +102,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
@@ -354,8 +353,8 @@
         218705392
       </h3>
       <div class="social-links">
-        <a href="#" class="github"><i class="bx bxl-github"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/FTadros/" class="github" target="_blank" rel="noreferrer noopener"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/felo-tadros/" class="linkedin" target="_blank" rel="noreferrer noopener"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
