Editing reflection and fixing spelling errors

--- a/index.html
+++ b/index.html
@@ -176,8 +176,6 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Tadros_Feloubatir_assign2_ENG2003_pages-to-jpg-0001.jpg" class="img-fluid" alt="">
@@ -185,7 +183,7 @@
                 <h4>Cover Letter</h4>
                 <p>ENG2003</p>
                 <div class="portfolio-links">
-                  <a href="" class="portfolio-lightbox" title="I chose this item as it was one of my favourite pieces to write for this course. I was able to effectively communicate why I wanted the job. I used what was taught to me in the tutorials and lectures. It pushed me out of my comfort zone as I was able to learn more about how to sell myself as an individual. I felt more confident after finishing the cover letter. I believe I put everything I could into this piece. I spent time putting myself in the position and was able to write confidently."><i class="bx bx-plus"></i></a>
+                  <a href="" class="portfolio-lightbox" title="I chose this item as it was one of my favourite pieces to write for this course. I was able to effectively communicate why I wanted the job. I felt like I used what was taught to me in the tutorials and lectures. It pushed me out of my comfort zone as I was able to learn more about how to promote myself professionally. I felt more confident after finishing the cover letter. I believe I put everything I could into this piece. I spent time putting myself in the position and was able to write confidently."><i class="bx bx-plus"></i></a>
                   <a href="https://drive.google.com/file/d/1JHJYOOEC83tfwy2d89WMbsY8aINBEQZr/view?usp=sharing" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -199,7 +197,7 @@
                 <h4>Brochure</h4>
                 <p>ENG2003</p>
                 <div class="portfolio-links">
-                  <a href="" class="portfolio-lightbox" title="This item was my first project for this course, and it showcases my first effort of communication. This piece shows I was able to communicate with visuals as well as research. This piece did not take me out of my comfort zone as I’ve worked on brochures before. The difference between this brochure and the others is that this is my first technical brochure. I believe that this is as good as I could have made it. I’m not only proud of the visuals but also the effort made in research and citing. "><i class="bx bx-plus"></i></a>
+                  <a href="" class="portfolio-lightbox" title="This item was my first project for this course, and it showcases my first effort of improved communication. This piece shows I was able to communicate with visuals as well as include research. It did not take me too far out of my comfort zone as I’ve worked on brochures before, the difference is that this is my first technical brochure. I believe that this is as good as I could have made it. I’m not only proud of the visuals but also the effort made in research and citing. Looking back, I could’ve made better efforts to highlight the graphics. This is only due to progressing in the course further."><i class="bx bx-plus"></i></a>
                   <a href="https://drive.google.com/file/d/1Ili4c5JOa8AnbUG7VjFO7q8ZqN9SfrR-/view?usp=sharing" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -213,7 +211,7 @@
                 <h4>Tutorial Graph</h4>
                 <p>ENG2003</p>
                 <div class="portfolio-links">
-                  <a href="" class="portfolio-lightbox" title="For tutorial 09, we had to create a graph based on website traffic data. This was the first piece where I felt confident in my creation before submitting it. I have experience with excel so it was nothing I haven’t done yet. I still ended up learning something new. I have never added a median line to a graph before. I believe that even with the new learning, this was my best work, given my knowledge at that time."><i class="bx bx-plus"></i></a>
+                  <a href="" class="portfolio-lightbox" title="For tutorial 09, we had to create a graph based on website traffic data. This was the first piece where I felt confident in my creation before submitting it. I have experience with Excel, so it was nothing I haven’t done yet. Surprisingly, I still ended up learning something new. I have never thought of adding additional lines to further demonstrate trends. I believe that even with the new learning, this was my best work, given my knowledge at that time."><i class="bx bx-plus"></i></a>
                   <a href="https://drive.google.com/file/d/1PRBgv-cf2-fzOQ81qc4eD9PjT6A9It1g/view?usp=sharing" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -227,7 +225,7 @@
                 <h4>Journal</h4>
                 <p>ENG1102</p>
                 <div class="portfolio-links">
-                  <a href="" class="portfolio-lightbox" title="This was a reflection on my experience during ENG1102 extracurricular activities. I chose this because this was my first reflection piece for first year. It displays the effects of this course on my ability to communicate. It didn’t push me out of my comfort zone as I’ve reflected before. This was my first university level piece so there was a lot of pressure for it to be done well. I believe that I could’ve done better. I reflected mostly on the content rather than my opinions on the content."><i class="bx bx-plus"></i></a>
+                  <a href="" class="portfolio-lightbox" title="This was a reflection on my experience during ENG1102 extracurricular activities. I chose this because this was my first reflection piece for first year. It displays the effects of this course on my ability to communicate. It didn’t push me out of my comfort zone as I’ve reflected before. This was my first university level piece so there was a lot of pressure for it to be done well. I believe that I could’ve done better. I reflected mostly on the content rather than my opinions on the content. I also could’ve talked more about my experience of the event."><i class="bx bx-plus"></i></a>
                   <a href="https://drive.google.com/file/d/1PSdnE3xUvFEHr3n0aYd2xdNPgDxvn2AS/view?usp=sharing" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -270,7 +268,7 @@
                 <h4>Presetter</h4>
                 <p>Java - Optimization</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/firststep.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="A system that would take potentiometer and button values and do certain things to my computer to open certain websites that I use often. I wrote this in Javas using with firmata4J and Java AWT."><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/firststep.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="A system that would take potentiometer and button values and do certain things to my computer to open certain websites that I use often. I wrote this in Java using firmata4J and Java AWT."><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/FTadros/Presetter" target="_blank" rel="noreferrer noopener"> <i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -289,21 +287,21 @@
           <h2>Reflection</h2>
         </div>
         <div>
-          <p>Overall, I enjoyed the experience. I learned a lot about how to professionally communicate as an engineer. This was the first time in my life that I got introduced to a technical report. I also learned how to properly convey myself to employers through the resume and cover letter lectures. This information, while not completely new, there were engineering specific things that I was taught that changed my point of view.</p>
+          <p>Overall, I enjoyed the experience. I learned a lot about how to professionally communicate as an engineer. This was the first time in my life that I got introduced to a technical report. I also learned how to properly convey myself to employers through the resume and cover letter lectures. This information, while not completely new, there were engineering specific things that I was taught that changed my point of view. This was also my first engineering course done in person. While some parts of ENG1102 were in person, I had very little interaction with the other people in my course.</p>
           <br>
-          <p>I started this course thinking there was going to be more focus on how to verbally communicate. But I was pleasantly surprised to find that there was a good mix of verbal and written communication skill being taught. I also expected that the tutorials would be more of a discussion, as there was no real &ldquo;tutoring&rdquo; needed for this course. The tutorials met my expectations.</p>
+          <p>I started this course thinking there was going to be more focus on how to verbally communicate. But I was pleasantly surprised to find that there was a good mix of verbal and written communication skill being taught. I also expected that the tutorials would be more of a discussion, as there was no real “tutoring” needed for this course. The tutorials met my expectations. Finally, I never expected to come out of this course with all these applicable skills. I never thought I’d learn this much.</p>
           <br>
-          <p>I found that the discussion on writing a cover letter was most useful as writing cover letters has always been a struggle for me. I found that the way it was taught, and the examples given helped me understand not just how to write a good cover letter but also how to spot mistakes.</p>
+          <p>I found that the discussion on writing a cover letter was most useful as writing cover letters has always been a struggle for me. I found that the way it was taught, and the examples given helped me understand not just how to write a good cover letter but also how to spot mistakes. Additionally, when doing the interview section, some of the points from the cover letter content carried over and I felt even better after the interview section.</p>
           <br>
-          <p>The discussion on graphics interested me as it was something that I&rsquo;ve always spotted. This was the first time I got to discuss the accuracy vs. effectiveness of graphics in a professional manner. I also found it useful in focusing on using as little ink as possible to convey my information.</p>
+          <p>The discussion on graphics interested me as it was something that I’ve always spotted, but never discussed about out loud. This was the first time I got to discuss the accuracy vs. effectiveness of graphics in a professional manner. I also found it useful in focusing on using as little ink as possible to convey my information.  I like the way the professor left us to interpret the graphics for ourselves and then point out the real graphical mistakes. I was surprised by how my understanding of technical graphics was affected by the media.</p>
           <br>
-          <p>I would describe my skills before this course as lackluster. I was unable to communicate about anything technical. I found myself unable to explain even the most basic technical concepts. Specifically, after the BOTN assignment, I felt confident in my ability to communicate technical concepts in simpler terms. I would describe my current (post-ENG2003) communication skills as tolerable. I believe that there&rsquo;s more for me to learn.</p>
+          <p>I would describe my skills before this course as lackluster. I was unable to communicate about anything technical. I found myself unable to explain even the most basic technical concepts. Specifically, after the BOTN assignment, I felt confident in my ability to communicate technical concepts in simpler terms. I would describe my current (post-ENG2003) communication skills as tolerable. I believe that there’s more for me to learn. I can learn by communicating more, this can be done n future engineering courses or in any professional environment.</p>
           <br>
-          <p>I believe that I improved my written communication skills, specifically when directly interacting with someone, such as through email, cover letter or resume. I believe this due to the fact that I felt the most progress in my skills after each assignment.</p>
+          <p>I believe that I improved my written communication skills, specifically when directly interacting with someone, such as through email, cover letter or resume. I believe this because I felt the most progress in my skills after each assignment.</p>
           <br>
-          <p>My verbal communication skills still need to be polished. During the BOTN presentation, while I was able to talk about the topic knowledgably, I&rsquo;m not confident in my presentation skills. This can be improved by doing more presentations and working in more group scenarios.</p>
+          <p>My verbal communication skills still need to be polished. During the BOTN presentation, while I was able to talk about the topic knowledgably, I’m not confident in my presentation skills. This can be improved by doing more presentations and working in more group scenarios. I can also try practicing in front of a crowd (such as family), or in a mirror. I’ve read of these tips online but have never applied them.</p>
           <br>
-          <p>I am now feeling confident not just in my engineering knowledge but also in my ability to communicate. This course has taught me to be a good engineer it&rsquo;s not enough to be knowledgeable, there is always the team working and communicating aspect. For engineering practice, this course taught me how to write a technical report, which is something that is not only valuable but will stick with me until I need it.</p>
+          <p>I am now feeling confident not just in my engineering knowledge but also in my ability to communicate. This course has taught me to be a good engineer it’s not enough to be knowledgeable, there is always the team working and communicating aspect. For engineering practice, this course taught me how to write a technical report, which is something that is not only valuable but will stick with me until I need it.</p>
         </div>
       </div>
     </section><!-- End Reflection Section -->
@@ -311,7 +309,6 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>Contact</h2>
         </div>
@@ -337,9 +334,6 @@
               <p>647-772-XXXX</p>
             </div>
           </div>
-
-
-
       </div>
     </section><!-- End Contact Section -->
 
